--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
@@ -28,7 +28,17 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id dolores odio magni? Cumque, ducimus totam laborum unde, eius illo facere vero soluta velit accusantium debitis rerum non quaerat natus nam Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestiae, nulla quaerat. Iusto natus temporibus quos, iste impedit tenetur earum itaque dolores ipsa, eum quidem deleniti exercitationem accusamus, explicabo neque suscipit Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam neque sapiente, ipsa ab aut soluta odio vitae delectus laboriosam eveniet, repudiandae voluptatibus recusandae modi! Mollitia, quam illo? Incidunt, quo fuga.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente sunt blanditiis repellat nam ipsam molestias rerum iste voluptatum culpa a recusandae asperiores laborum laboriosam nostrum cumque est magni, exercitationem tempora!</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Totam est eius, assumenda repellendus dolor quaerat quia vero? Eveniet dolorum eos, laborum similique nemo accusantium dolor adipisci dolore, voluptas, distinctio cumque.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate eius sunt provident, asperiores aliquam adipisci reiciendis impedit doloribus tenetur, debitis esse quo aperiam hic repellendus in tempore. Est, nam recusandae.</p>
     </main>
 </body>
 </html>
