--- a/desafios/desafio012/cordel.html
+++ b/desafios/desafio012/cordel.html
@@ -15,17 +15,28 @@
     <section>
         <article id="art1">
             <main>
-                Estou ficando cansado <br>
-                Da tal tecnologia <br>
-                Só se fala por e-mail <br>
-                Mensagem curta e fria <br>
-                Twitter e Facebook <br>
-                Antes que eu caduque <br>
-                Vou dizer tudo em poesia. <br>
-                <picture>
-                    <img src="imagens/background001.jpg" alt="girasol">
-                </picture>
+                <p>
+                    Estou ficando cansado <br>
+                    Da tal tecnologia <br>
+                    Só se fala por e-mail <br>
+                    Mensagem curta e fria <br>
+                    Twitter e Facebook <br>
+                    Antes que eu caduque <br>
+                    Vou dizer tudo em poesia <br>
+                </p>
+
             </main>  
+            <main id="foto">
+                <p>
+                    Não é mais como era antes <br>
+                    É tudo abreviado <br>
+                    "Você" só tem duas letras <br>
+                    O "O" e o "E" foi riscado <br>
+                    Para declarar o amor <br>
+                    Basta botar uma flor <br>
+                    E um coração desenhado. <br>
+                </p>
+            </main>
         </article>
         <article>
 
